--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,9 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-accordion": "^1.2.12",
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-scroll-area": "^1.2.10",
+		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-slot": "^1.2.4",
 		"@tailwindcss/vite": "^4.1.18",
 		"class-variance-authority": "^0.7.1",
