feat: Initialize new React application structure with core UI components, routing, and styling.

--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
 		"@radix-ui/react-tooltip": "^1.2.8",
+		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.18",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -33,7 +34,9 @@
 		"os-utils": "^0.0.14",
 		"react": "^19.2.3",
 		"react-dom": "^19.2.3",
+		"react-markdown": "^10.1.0",
 		"react-router-dom": "^7.13.0",
+		"remark-gfm": "^4.0.1",
 		"shadcn": "^3.6.3",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.18",
