--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,10 @@
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
 		"@radix-ui/react-tooltip": "^1.2.8",
+		"@streamdown/cjk": "^1.0.1",
+		"@streamdown/code": "^1.0.1",
+		"@streamdown/math": "^1.0.1",
+		"@streamdown/mermaid": "^1.0.1",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.18",
 		"class-variance-authority": "^0.7.1",
@@ -40,6 +44,7 @@
 		"react-router-dom": "^7.13.0",
 		"remark-gfm": "^4.0.1",
 		"shadcn": "^3.6.3",
+		"streamdown": "^2.1.0",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.18",
 		"tailwindcss-animate": "^1.0.7",
